--- a/SaltyBoxes/Salt-GUI/index.html
+++ b/SaltyBoxes/Salt-GUI/index.html
@@ -15,6 +15,7 @@
                 <button class="btn btn-connect">Manage Devices <span class="notification-badge">0</span></button>
             </div>
             <div class="header-right">
+                <button class="btn btn-small" id="refresh-all" title="Refresh Devices">Refresh</button>
                 <span class="status-indicator" id="salt-status">
                     <span class="status-dot"></span>
                     <span class="status-text">Checking...</span>
